[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "MolIO"
version = "0.0.1"
authors = [
    {name="FEI YUAN", email="fei.yuan@bcm.edu"},
    {name="Chong Lu", email="chong.lu@bcm.edu"},
]
description = "A simple module for molecule I/O."
readme = "README.md"
requires-python = ">=3.9"
license = {text = 'MIT'}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'cmder',
    'vstool@git+https://github.com/yuanfeifuzzy/vstool.git@e44fc3aa116e22e8c2d673eba8870cb38e8ff5f2'
]
[tool.flit.module]
name = 'MolIO'
